# Microstructure-engine

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
.codex/hooks/: run_quality_checks.sh
dashboard/: app.py
data/sample/: GS_1s_2025-01-02_prices_sample.csv  GS_1s_2025-01-02_quotes_sample.csv  GS_1s_2025-01-02_trades_sample.csv  README.md
docs/: data-conventions.md
scripts/: generate_features.py
src/microdash/: __init__.py  alignment.py  data_inventory.py  feature_generation.py  features.py  raw_loader.py
tests/: test_alignment.py  test_data_inventory.py  test_feature_generation.py  test_features.py  test_import.py  test_raw_loader.py  test_sample_data.py
